<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:background="@drawable/bg_upload"
    tools:context=".UploadActivity">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="280dp"
        android:layout_marginTop="65dp"
        android:src="@drawable/ic_back"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/backButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/uploadNomorPolisi"
            android:background="@drawable/green_border"
            android:hint="@string/nomor_polisi"
            android:textSize="17sp"
            android:layout_marginEnd="35dp"
            android:layout_marginStart="35dp"
            android:gravity="start|center_horizontal"
            android:padding="15dp"
            android:textColor="@color/green" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/uploadNamaPemilik"
            android:background="@drawable/green_border"
            android:hint="@string/nama_pemilik1"
            android:textSize="17sp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="35dp"
            android:layout_marginStart="35dp"
            android:gravity="start|center_horizontal"
            android:padding="15dp"
            android:textColor="@color/green" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/uploadMerkKendaraan"
            android:background="@drawable/green_border"
            android:hint="@string/merk_kendaraan1"
            android:textSize="17sp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="35dp"
            android:layout_marginStart="35dp"
            android:gravity="start|center_horizontal"
            android:padding="15dp"
            android:textColor="@color/green" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/uploadWilayah"
            android:background="@drawable/green_border"
            android:hint="@string/wilayah1"
            android:textSize="17sp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="35dp"
            android:layout_marginStart="35dp"
            android:gravity="start|center_horizontal"
            android:padding="15dp"
            android:textColor="@color/green" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/simpan"
            android:id="@+id/saveButton"
            android:textSize="17sp"
            android:backgroundTint="@color/green"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="35dp"
            android:layout_marginStart="35dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>