<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:background="@drawable/bg_admin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="440dp"
        android:layout_gravity="center_horizontal"
        android:padding="20dp">

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/upload"
            android:id="@+id/mainUpload"
            android:textSize="17sp"
            android:backgroundTint="@color/green"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="35dp"
            android:layout_marginStart="35dp" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/kelola"
            android:id="@+id/mainKelola"
            android:textSize="17sp"
            android:backgroundTint="@color/green"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="35dp"
            android:layout_marginStart="35dp" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/keluar"
            android:id="@+id/keluar"
            android:textSize="17sp"
            android:backgroundTint="@color/red"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="35dp"
            android:layout_marginStart="35dp" />

        <TextView
            android:id="@+id/aboutButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/about"
            android:textColor="@color/green"
            android:textSize="11sp" />


    </LinearLayout>

</LinearLayout>