<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_manage"
    tools:context=".ManageActivity">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="280dp"
        android:layout_marginTop="65dp"
        android:src="@drawable/ic_back"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/backButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cariNopol"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="55dp"
        android:layout_marginStart="55dp"
        android:padding="15dp"
        android:background="@drawable/green_border"
        android:hint="@string/cari_nomor_polisi"
        android:textSize="17sp"
        android:textColor="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/searchButton"
        android:textColor="@color/white"
        android:text="@string/cari"
        android:textSize="17sp"
        android:padding="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="55dp"
        android:layout_marginStart="55dp"
        android:backgroundTint="@color/green"
        app:layout_constraintStart_toStartOf="@+id/cariNopol"
        app:layout_constraintEnd_toEndOf="@+id/cariNopol"
        app:layout_constraintTop_toBottomOf="@+id/cariNopol"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchButton">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/green_border"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/namaPemilik"
                    android:layout_weight="1"
                    android:text="@string/nama_pemilik"
                    android:textStyle="bold"
                    android:textColor="@color/green"
                    android:textSize="17sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/readNamaPemilik"
                    android:text=""
                    android:layout_weight="1"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/green"
                    android:textSize="17sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="horizontal"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/merkKendaraan"
                    android:layout_weight="1"
                    android:text="@string/merk_kendaraan"
                    android:textStyle="bold"
                    android:textColor="@color/green"
                    android:textSize="17sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/readMerkKendaraan"
                    android:text=""
                    android:layout_weight="1"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/green"
                    android:textSize="17sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="horizontal"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/wilayah"
                    android:layout_weight="1"
                    android:text="@string/wilayah"
                    android:textStyle="bold"
                    android:textColor="@color/green"
                    android:textSize="17sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/readWilayah"
                    android:text=""
                    android:layout_weight="1"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/green"
                    android:textSize="17sp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <Button
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:text="@string/update"
                android:id="@+id/updateButton"
                android:textSize="17sp"
                android:backgroundTint="@color/green"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1" />

            <Button
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:text="@string/hapus"
                android:id="@+id/deleteButton"
                android:textSize="17sp"
                android:backgroundTint="@color/red"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>